--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 body {
-  background: #2D4739; /* Forest green background */
+  background: #150220; /* Forest green background */
   margin: 0;
   padding: 0;
   width: 100vw;
